--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gatsby-image": "2.0.38",
     "gatsby-mdx": "0.4.5",
     "gatsby-plugin-emotion": "4.0.6",
+    "gatsby-plugin-flow": "1.0.5",
     "gatsby-plugin-manifest": "2.0.29",
     "gatsby-plugin-offline": "2.0.25",
     "gatsby-plugin-react-helmet": "3.0.12",
@@ -59,7 +60,6 @@
     "gatsby-transformer-sharp": "2.1.18",
     "lodash": "4.17.11",
     "polished": "3.2.0",
-    "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-helmet": "5.2.0",
