--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-helmet": "5.2.0",
+    "react-map-gl": "4.1.2",
     "styled-components": "4.2.0",
     "typography": "0.16.19",
     "typography-theme-stern-grove": "0.16.19"
